--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "nodemon": "^1.17.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
