--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server-dev": "nodemon server/index.js",
     "setup-db": "node models/dummydata.js",
     "client-test": "NODE_ENV=test jest --coverage",
-    "client-test -w": "NODE_ENV=test jest --watch"
+    "client-test -w": "NODE_ENV=test jest --watch",
+    "init-db": "node models/dbinit.js"
   },
   "jest": {
     "setupFiles": [
